objects/Company_Profile__c.object
<CustomObject>
    <fields>
        <fullName>BBB_Rating__c</fullName>
        <label>BBB Rating</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Year_Founded__c</fullName>
        <label>Year Founded</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Company_History__c</fullName>
        <label>Company History</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Warranty_Description__c</fullName>
        <label>Warranty Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Company Profile</label>
    <nameField>
        <label>Company Profile Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Company Profiles</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>